Fri Nov 30 21:55:49 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Fixed a bug in tracking remote endpoint data when
          a local topic is removed and then re-created.

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Test the scenario described above.

        * dds/idl/CPPTemplate.txt:

          Fixed a leak of refcount on the subscriber object
          when invoking its listener for on_data_on_readers().

Thu Nov 29 21:50:32 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:
        * tests/DCPS/RecorderReplayer/Relay.cpp:

          Fixed a bug in delete_recorder().
          Thanks to Joachim Achtzehnter and Carol Wong.

Wed Nov 21 16:08:18 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/transport/framework/TransportClient.h:
        * dds/DCPS/transport/framework/TransportClient.cpp:
        * dds/DCPS/transport/framework/TransportRegistry.h:
        * dds/DCPS/transport/framework/TransportRegistry.inl:
        * dds/DCPS/transport/framework/TransportRegistry.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RecorderImpl.h:
        * dds/DCPS/ReplayerImpl.h:

          Allow a per-domain default transport config.  If the Entity being
          enabled (DataReader/DataWriter) doesn't have a transport config bound
          directly or to a parent Entity, use the per-domain default if set.
          The per-domain default can be set by method calls on TransportRegistry
          or by using the config file option DefaultTransportConfig in the
          [domain/*] section.  The value can be any transport config name or the
          special $file value which is also used by DCPSGlobalTransportConfig.

        * tests/DCPS/ConfigFile/ConfigFile.cpp:
        * tests/DCPS/ConfigFile/test1.ini:
        * tests/DCPS/CorbaSeq/pub.ini: