@@ -212,6 +212,7 @@ tests/DCPS/ContentFilteredTopic/run_test.pl rtps_disc: !DCPS_MIN !NO_MCAST !DDS_
 tests/DCPS/ContentFilteredTopic/run_test.pl rtps_disc nopub: !DCPS_MIN !NO_MCAST !DDS_NO_CONTENT_FILTERED_TOPIC !DDS_NO_CONTENT_SUBSCRIPTION RTPS !NO_BUILT_IN_TOPICS
 tests/DCPS/TopicExpression/run_test.pl: !DCPS_MIN !DDS_NO_MULTI_TOPIC !DDS_NO_CONTENT_SUBSCRIPTION
 tests/DCPS/MultiTopic/run_test.pl: !DCPS_MIN !DDS_NO_MULTI_TOPIC !DDS_NO_CONTENT_SUBSCRIPTION
+tests/DCPS/MultiTopic/run_test.pl rtps_disc: !DCPS_MIN !DDS_NO_MULTI_TOPIC !DDS_NO_CONTENT_SUBSCRIPTION RTPS
 tests/DCPS/MetaStruct/run_test.pl: !DCPS_MIN !DDS_NO_CONTENT_SUBSCRIPTION
 
 tests/DCPS/Federation/run_test.pl: !DCPS_MIN !DDS_NO_OWNERSHIP_PROFILE
