@@ -8,10 +8,14 @@
 #include <dds/DCPS/WaitSet.h>
 #include "dds/DCPS/StaticIncludes.h"
 
+#include "dds/DCPS/transport/framework/TransportRegistry.h"
+
 #include "MultiTopicTestTypeSupportImpl.h"
 
 using namespace DDS;
 using namespace OpenDDS::DCPS;
+
+const int N_ITERATIONS = 5;
 
 void waitForMatch(const StatusCondition_var& sc)
 {
@@ -26,10 +30,10 @@ void waitForMatch(const StatusCondition_var& sc)
 
 template <typename TSImpl>
 struct Writer {
-  Writer(const DomainParticipant_var& dp, const Publisher_var& pub,
-    const char* topic_name)
+  Writer(const Publisher_var& pub, const char* topic_name)
     : ts_(new TSImpl)
   {
+    DomainParticipant_var dp = pub->get_participant();
     ts_->register_type(dp, "");
     CORBA::String_var type_name = ts_->get_type_name();
     Topic_var topic = dp->create_topic(topic_name, type_name,
@@ -42,104 +46,155 @@ struct Writer {
   DataWriter_var dw_;
 };
 
-bool run_multitopic_test(const DomainParticipant_var& dp,
-  const Publisher_var& pub, const Subscriber_var& sub)
+bool run_multitopic_test(const Publisher_var& pub, const Subscriber_var& sub)
 {
   // Writer-side setup
 
-  Writer<LocationInfoTypeSupportImpl> location(dp, pub, "Location");
-  Writer<PlanInfoTypeSupportImpl> flightplan(dp, pub, "FlightPlan");
-  Writer<MoreInfoTypeSupportImpl> more(dp, pub, "More");
-  Writer<UnrelatedInfoTypeSupportImpl> unrelated(dp, pub, "Unrelated");
-
-  // Reader-side setup
-
-  ResultingTypeSupport_var ts_res = new ResultingTypeSupportImpl;
-  ts_res->register_type(dp, "");
-  CORBA::String_var type_name = ts_res->get_type_name();
-  MultiTopic_var mt = dp->create_multitopic("MyMultiTopic", type_name,
-    "SELECT flight_name, x, y, z AS height, more, misc "
-    "FROM Location NATURAL JOIN FlightPlan NATURAL JOIN More NATURAL JOIN "
-    "Unrelated WHERE height < 1000 AND x<23", StringSeq());
-  if (!mt) return false;
-  DataReader_var dr = sub->create_datareader(mt, DATAREADER_QOS_DEFAULT,
-    0, DEFAULT_STATUS_MASK);
-
-  // Write samples (Location)
-
-  StatusCondition_var dw_sc = location.dw_->get_statuscondition();
-  waitForMatch(dw_sc);
-  LocationInfoDataWriter_var locdw =
-    LocationInfoDataWriter::_narrow(location.dw_);
-  LocationInfo sample = {100, 97, 23, 2, 3}; // filtered out (x < 23)
-  ReturnCode_t ret = locdw->write(sample, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  LocationInfo sample2 = {100, 96, 1, 2, 3000}; // filtered out (height < 1000)
-  ret = locdw->write(sample2, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  LocationInfo sample3 = {100, 99, 1, 2, 3};
-  ret = locdw->write(sample3, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  LocationInfo sample3_5 = {100, 98, 4, 5, 6};
-  ret = locdw->write(sample3_5, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-
-  // Write samples (FlightPlan)
-
-  StatusCondition_var dw2_sc = flightplan.dw_->get_statuscondition();
-  waitForMatch(dw2_sc);
-  PlanInfoDataWriter_var pidw = PlanInfoDataWriter::_narrow(flightplan.dw_);
-  PlanInfo sample4;
-  sample4.flight_id1 = 100;
-  sample4.flight_id2 = 99;
-  sample4.flight_name = "Flight 100-99";
-  sample4.tailno = "N12345";
-  ret = pidw->write(sample4, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  PlanInfo sample4_1(sample4);
-  sample4_1.flight_id2 = 97;
-  sample4_1.flight_name = "Flight 100-97";
-  ret = pidw->write(sample4_1, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  PlanInfo sample4_2(sample4);
-  sample4_2.flight_id2 = 96;
-  sample4_2.flight_name = "Flight 100-96";
-  ret = pidw->write(sample4_2, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-
-  // Write samples (More)
-
-  StatusCondition_var dw3_sc = more.dw_->get_statuscondition();
-  waitForMatch(dw3_sc);
+  Writer<LocationInfoTypeSupportImpl> location(pub, "Location");
+  Writer<PlanInfoTypeSupportImpl> flightplan(pub, "FlightPlan");
+  Writer<MoreInfoTypeSupportImpl> more(pub, "More");
+  Writer<UnrelatedInfoTypeSupportImpl> unrelated(pub, "Unrelated");
   MoreInfoDataWriter_var midw = MoreInfoDataWriter::_narrow(more.dw_);
+
+  CORBA::String_var type_name;
+  DomainParticipant_var dp;
   MoreInfo mi;
-  mi.flight_id1 = 12345;
-  mi.more = "Shouldn't see this";
-  ret = midw->write(mi, HANDLE_NIL);
+  DDS::DataReader_var dr;
+  for (int i = 0; i < N_ITERATIONS; ++i) {
+
+    // Reader-side setup
+
+    if (i == 0) {
+      ResultingTypeSupport_var ts_res = new ResultingTypeSupportImpl;
+      dp = sub->get_participant();
+      ts_res->register_type(dp, "");
+      type_name = ts_res->get_type_name();
+    }
+    MultiTopic_var mt = dp->create_multitopic("MyMultiTopic", type_name,
+      "SELECT flight_name, x, y, z AS height, more, misc "
+      "FROM Location NATURAL JOIN FlightPlan NATURAL JOIN More NATURAL JOIN "
+      "Unrelated WHERE height < 1000 AND x<23", StringSeq());
+    if (!mt) return false;
+    dr = sub->create_datareader(mt, DATAREADER_QOS_DEFAULT,
+                                0, DEFAULT_STATUS_MASK);
+
+    // Write samples (Location)
+
+    StatusCondition_var dw_sc = location.dw_->get_statuscondition();
+    waitForMatch(dw_sc);
+    LocationInfoDataWriter_var locdw =
+      LocationInfoDataWriter::_narrow(location.dw_);
+    LocationInfo sample = {100, 97, 23, 2, 3}; // filtered out (x < 23)
+    ReturnCode_t ret = locdw->write(sample, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    LocationInfo sample2 = {100, 96, 1, 2, 3000}; // filtered out (height < 1000)
+    ret = locdw->write(sample2, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    LocationInfo sample3 = {100, 99, 1, 2, 3};
+    ret = locdw->write(sample3, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    LocationInfo sample3_5 = {100, 98, 4, 5, 6};
+    ret = locdw->write(sample3_5, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+
+    // Write samples (FlightPlan)
+
+    StatusCondition_var dw2_sc = flightplan.dw_->get_statuscondition();
+    waitForMatch(dw2_sc);
+    PlanInfoDataWriter_var pidw = PlanInfoDataWriter::_narrow(flightplan.dw_);
+    PlanInfo sample4;
+    sample4.flight_id1 = 100;
+    sample4.flight_id2 = 99;
+    sample4.flight_name = "Flight 100-99";
+    sample4.tailno = "N12345";
+    ret = pidw->write(sample4, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    PlanInfo sample4_1(sample4);
+    sample4_1.flight_id2 = 97;
+    sample4_1.flight_name = "Flight 100-97";
+    ret = pidw->write(sample4_1, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    PlanInfo sample4_2(sample4);
+    sample4_2.flight_id2 = 96;
+    sample4_2.flight_name = "Flight 100-96";
+    ret = pidw->write(sample4_2, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+
+    // Write samples (More)
+
+    StatusCondition_var dw3_sc = more.dw_->get_statuscondition();
+    waitForMatch(dw3_sc);
+    mi.flight_id1 = 12345;
+    mi.more = "Shouldn't see this";
+    ret = midw->write(mi, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+    mi.flight_id1 = 100;
+    mi.more = "Extra info for all flights with id1 == 100";
+    ret = midw->write(mi, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+
+    // Write samples (Unrelated)
+
+    StatusCondition_var dw4_sc = unrelated.dw_->get_statuscondition();
+    waitForMatch(dw4_sc);
+    UnrelatedInfoDataWriter_var uidw =
+      UnrelatedInfoDataWriter::_narrow(unrelated.dw_);
+    UnrelatedInfo ui;
+    ui.misc = "Misc";
+    ret = uidw->write(ui, HANDLE_NIL);
+    if (ret != RETCODE_OK) return false;
+
+    // Read resulting samples
+
+    WaitSet_var ws = new WaitSet;
+    ReadCondition_var rc = dr->create_readcondition(ANY_SAMPLE_STATE,
+      ANY_VIEW_STATE, ANY_INSTANCE_STATE);
+    ws->attach_condition(rc);
+    Duration_t infinite = {DURATION_INFINITE_SEC, DURATION_INFINITE_NSEC};
+    ConditionSeq active;
+    ret = ws->wait(active, infinite);
+    if (ret != RETCODE_OK) return false;
+    ws->detach_condition(rc);
+    ResultingDataReader_var res_dr = ResultingDataReader::_narrow(dr);
+    ResultingSeq data;
+    SampleInfoSeq info;
+    ret = res_dr->take_w_condition(data, info, LENGTH_UNLIMITED, rc);
+    if (ret != RETCODE_OK) return false;
+    if (data.length() > 1 || !info[0].valid_data) return false;
+    std::cout << "Received: " << data[0].flight_id1 << '-' <<
+      data[0].flight_id2 << " \"" << data[0].flight_name << "\" " << data[0].x <<
+      " " << data[0].y << " " << data[0].height << " \"" << data[0].more <<
+      "\" \"" << data[0].misc << "\"" << std::endl;
+    if (data[0].flight_id1 != sample4.flight_id1 || data[0].flight_id2 !=
+        sample4.flight_id2 || strcmp(data[0].flight_name, sample4.flight_name) ||
+        data[0].x != sample3.x || data[0].y != sample3.y ||
+        data[0].height != sample3.z || strcmp(data[0].more, mi.more) ||
+        strcmp(data[0].misc, ui.misc)) {
+      return false;
+    }
+    data.length(0);
+    info.length(0);
+    ret = res_dr->read_w_condition(data, info, LENGTH_UNLIMITED, rc);
+    dr->delete_readcondition(rc);
+    if (ret != RETCODE_NO_DATA) return false;
+
+    // Reader cleanup
+    if (i != N_ITERATIONS - 1) {
+      sub->delete_datareader(dr);
+      dp->delete_multitopic(mt);
+    }
+  }
+
+  // Dispose
+
+  ReturnCode_t ret = midw->dispose(mi, HANDLE_NIL);
   if (ret != RETCODE_OK) return false;
-  mi.flight_id1 = 100;
-  mi.more = "Extra info for all flights with id1 == 100";
-  ret = midw->write(mi, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-
-  // Write samples (Unrelated)
-
-  StatusCondition_var dw4_sc = unrelated.dw_->get_statuscondition();
-  waitForMatch(dw4_sc);
-  UnrelatedInfoDataWriter_var uidw =
-    UnrelatedInfoDataWriter::_narrow(unrelated.dw_);
-  UnrelatedInfo ui;
-  ui.misc = "Misc";
-  ret = uidw->write(ui, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-
-  // Read resulting samples
-
+  ReadCondition_var rc =
+    dr->create_readcondition(ANY_SAMPLE_STATE, ANY_VIEW_STATE,
+                             NOT_ALIVE_DISPOSED_INSTANCE_STATE);
   WaitSet_var ws = new WaitSet;
-  ReadCondition_var rc = dr->create_readcondition(ANY_SAMPLE_STATE,
-    ANY_VIEW_STATE, ANY_INSTANCE_STATE);
   ws->attach_condition(rc);
-  Duration_t infinite = {DURATION_INFINITE_SEC, DURATION_INFINITE_NSEC};
+  const Duration_t infinite = {DURATION_INFINITE_SEC, DURATION_INFINITE_NSEC};
   ConditionSeq active;
   ret = ws->wait(active, infinite);
   if (ret != RETCODE_OK) return false;
@@ -147,37 +202,6 @@ bool run_multitopic_test(const DomainParticipant_var& dp,
   ResultingDataReader_var res_dr = ResultingDataReader::_narrow(dr);
   ResultingSeq data;
   SampleInfoSeq info;
-  ret = res_dr->take_w_condition(data, info, LENGTH_UNLIMITED, rc);
-  if (ret != RETCODE_OK) return false;
-  if (data.length() > 1 || !info[0].valid_data) return false;
-  std::cout << "Received: " << data[0].flight_id1 << '-' <<
-    data[0].flight_id2 << " \"" << data[0].flight_name << "\" " << data[0].x <<
-    " " << data[0].y << " " << data[0].height << " \"" << data[0].more <<
-    "\" \"" << data[0].misc << "\"" << std::endl;
-  if (data[0].flight_id1 != sample4.flight_id1 || data[0].flight_id2 !=
-      sample4.flight_id2 || strcmp(data[0].flight_name, sample4.flight_name) ||
-      data[0].x != sample3.x || data[0].y != sample3.y ||
-      data[0].height != sample3.z || strcmp(data[0].more, mi.more) ||
-      strcmp(data[0].misc, ui.misc)) {
-    return false;
-  }
-  data.length(0);
-  info.length(0);
-  ret = res_dr->read_w_condition(data, info, LENGTH_UNLIMITED, rc);
-  dr->delete_readcondition(rc);
-  if (ret != RETCODE_NO_DATA) return false;
-
-  // Dispose
-
-  ret = midw->dispose(mi, HANDLE_NIL);
-  if (ret != RETCODE_OK) return false;
-  rc = dr->create_readcondition(ANY_SAMPLE_STATE, ANY_VIEW_STATE,
-                                NOT_ALIVE_DISPOSED_INSTANCE_STATE);
-  ws->attach_condition(rc);
-  active.length(0);
-  ret = ws->wait(active, infinite);
-  if (ret != RETCODE_OK) return false;
-  ws->detach_condition(rc);
   ret = res_dr->read_w_condition(data, info, LENGTH_UNLIMITED, rc);
   dr->delete_readcondition(rc);
   if (ret != RETCODE_OK) return false;
@@ -196,13 +220,25 @@ int run_test(int argc, ACE_TCHAR* argv[])
   Publisher_var pub = dp->create_publisher(PUBLISHER_QOS_DEFAULT, 0,
                                            DEFAULT_STATUS_MASK);
 
+  DomainParticipant_var dp2 =
+    dpf->create_participant(23, PARTICIPANT_QOS_DEFAULT, 0,
+                            DEFAULT_STATUS_MASK);
+
   Subscriber_var sub = dp->create_subscriber(SUBSCRIBER_QOS_DEFAULT, 0,
                                              DEFAULT_STATUS_MASK);
 
-  bool passed = run_multitopic_test(dp, pub, sub);
+  TransportRegistry& treg = *TheTransportRegistry;
+  if (!treg.get_config("t1").is_nil()) {
+    treg.bind_config("t1", pub);
+    treg.bind_config("t2", sub);
+  }
+
+  const bool passed = run_multitopic_test(pub, sub);
 
   dp->delete_contained_entities();
   dpf->delete_participant(dp);
+  dp2->delete_contained_entities();
+  dpf->delete_participant(dp2);
   return passed ? 0 : 1;
 }
 
