@@ -1,0 +1,23 @@
+[common]
+DCPSGlobalTransportConfig=$file
+
+[domain/23]
+DiscoveryConfig=uni_rtps
+
+[rtps_discovery/uni_rtps]
+SedpMulticast=0
+ResendPeriod=2
+
+[transport/the_rtps_transport]
+transport_type=rtps_udp
+use_multicast=0
+
+[transport/the_rtps_transport2]
+transport_type=rtps_udp
+use_multicast=0
+
+[config/t1]
+transports=the_rtps_transport
+
+[config/t2]
+transports=the_rtps_transport2
