@@ -1,3 +1,13 @@
+Tue Dec  4 17:21:03 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/dcps_tests.lst:
+        * tests/DCPS/MultiTopic/MultiTopicTest.cpp:
+        * tests/DCPS/MultiTopic/rtps_disc.ini:
+        * tests/DCPS/MultiTopic/run_test.pl:
+
+          Also test with RTPS, and test multiple iterations
+          with creating the MultiTopic DataReader each time.
+
 Fri Nov 30 21:55:49 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/RTPS/Sedp.cpp:
